회원 가입 및 피플 만들기

--- a/templates/base.html
+++ b/templates/base.html
@@ -8,6 +8,15 @@
     <h1>
         <a href="{{ url_for("home") }}">피플</a>
     </h1>
+    {% with messages = get_flashed_messages() %}
+    {% if messages %}
+    <ul>
+        {% for message in messages %}
+        <li>{{ message }}</li>
+        {% endfor %}
+    </ul>
+    {% endif %}
+    {% endwith %}
 </header>
 <main>
     {% block content %}
